# backend/src/routes/index.js
@@ -4,6 +4,7 @@ import express from 'express';
 import authRoutes from './auth.routes.js';
 import userRoutes from './user.routes.js';
 import categoryRoutes from './category.routes.js';
+import productRoutes from './product.routes.js';
 
 const router = express.Router();
 
@@ -11,5 +12,6 @@ const router = express.Router();
 router.use('/auth', authRoutes);
 router.use('/users', userRoutes);
 router.use('/categories', categoryRoutes);
+router.use('/products', productRoutes);
 
 export default router;
